# U-TRR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
RowScout/: CMakeLists.txt  RowScout.cpp  config.yml
TRRAnalyzer/: RowGroup.h  RowGroupSelector.cpp  RowGroupSelector.h  TRRAnalyzer.cpp
TRRAnalyzer/scripts/: SoftMC_Experiment.py  SoftMC_Utils.py  plot_trran.py
include/: BitUtils.h  Colors.h  Dram.h  DramParameters.h  MemoryAnalysis.h  RowGroup.h  RowGroupSelector.h  TRRAnalyzerConfig.h  json_struct.h  perfect_hash.h  softmc_utils.h
include/TRRAnalyzer/: config.h
src/: BitUtils.cpp  CMakeLists.txt  Dram.cpp  MemoryAnalysis.cpp  RowGroup.cpp  RowGroupSelector.cpp  main.cpp  softmc_utils.cpp
src/RowScout/: RowScout.cpp  config.yml  pseudo.code
src/TRRAnalyzer/: TRRAnalyzer.cpp  TRRAnalyzerConfig.cpp  config.cpp  config.yml
tools/: softmc_utils.h
